user panier added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ services:
   backend:
     build: ./backend
     ports:
-      - "3001:3001"
+      - "5000:5000"
     environment:
-      - DATABASE_URL="postgresql://postgres.stfmmjtujnliwaikotfq:22sarairatni0011@aws-0-eu-west-3.pooler.supabase.com:6543/postgres?pgbouncer=true"
-      - DIRECT_URL="postgresql://postgres.stfmmjtujnliwaikotfq:22sarairatni0011@aws-0-eu-west-3.pooler.supabase.com:5432/postgres"
+      - DATABASE_URL=postgresql://postgres.stfmmjtujnliwaikotfq:22sarairatni0011@aws-0-eu-west-3.pooler.supabase.com:6543/postgres?pgbouncer=true
+      - DIRECT_URL=postgresql://postgres.stfmmjtujnliwaikotfq:22sarairatni0011@aws-0-eu-west-3.pooler.supabase.com:5432/postgres
       - JWT_SECRET=99condorsecret@
 
   frontend:
