--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
