--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,7 +12,8 @@
     "clsx": "^2.1.1",
     "next": "15.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.61.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -22,7 +23,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
