Fix Prisma generate command (remove --force flag)

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: mycondor2-backend
     env: node
-    buildCommand: npm install && npx prisma generate --force && npx prisma migrate deploy && npm run build
+    buildCommand: npm install && npx prisma generate && npx prisma migrate deploy && npm run build
     startCommand: npm start
     envVars:
       - key: DATABASE_URL
