--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@supabase/supabase-js": "^2.53.0",
     "clsx": "^2.1.1",
+    "firebase": "^12.0.0",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
