--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-data-grid": "^8.9.1",
     "@supabase/supabase-js": "^2.53.0",
     "clsx": "^2.1.1",
     "firebase": "^12.0.0",
