--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,13 @@
 FROM node:20.10-alpine
- 
+
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
 
 COPY . .
+
+COPY .env .env
 
 RUN npx prisma generate
 
