fixed front-end in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build frontend Docker image
         run: |
-          docker build --no-cache -t my-frontend-image ./frontend
+          docker build --no-cache -t my-frontend-image ./fron-tend
 
       - name: 🛠️ Build and run containers
         run: |
