--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
         run: |
           docker build --no-cache -t my-frontend-image ./front-end
 
-      - name: Build and run containers
-        run: |
-          docker compose down || true
-          docker compose up --build -d
-          docker ps 
+      # - name: Build and run containers
+      #   run: |
+      #     docker compose down || true
+      #     docker compose up --build -d
+      #     docker ps 
