--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-list-endpoints": "^7.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "openai": "^4.77.3"
   }
 }
